// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults renders 'keep typing' correctly 1`] = `
<div>
  <ForwardRef(WithStyles)
    className=""
  >
     Keep typing!
  </ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      button={true}
      onClick={[Function]}
    >
      <ForwardRef(WithStyles)
        primary="BUSCOM 629 Employment Law"
      />
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      button={true}
      onClick={[Function]}
    >
      <ForwardRef(WithStyles)
        primary="BUSCOM 631 Entrepreneurship Law"
      />
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</div>
`;

exports[`SearchResults renders 'no results' correctly 1`] = `
<ForwardRef(WithStyles)
  className=""
>
  No results
</ForwardRef(WithStyles)>
`;

exports[`SearchResults renders correctly 1`] = `
<div>
  <ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      button={true}
      onClick={[Function]}
    >
      <ForwardRef(WithStyles)
        primary="BUSCOM 629 Employment Law"
      />
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      button={true}
      onClick={[Function]}
    >
      <ForwardRef(WithStyles)
        primary="BUSCOM 631 Entrepreneurship Law"
      />
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</div>
`;

exports[`SearchResults renders loading correctly 1`] = `
<div
  className=""
>
  <ForwardRef(WithStyles) />
</div>
`;
